@@ -1,25 +1,40 @@
 # Configuration of the "dfs" context for null
 dfs.class=org.apache.hadoop.metrics.spi.NullContext
 
-# Configuration of the "mapred" context for null
-mapred.class=org.apache.hadoop.metrics.spi.NullContext
-
 # Configuration of the "dfs" context for file
 #dfs.class=org.apache.hadoop.metrics.file.FileContext
 #dfs.period=10
 #dfs.fileName=/tmp/dfsmetrics.log
-
-# Configuration of the "mapred" context for file
-#mapred.class=org.apache.hadoop.metrics.file.FileContext
-#mapred.period=10
-#mapred.fileName=/tmp/mrmetrics.log
 
 # Configuration of the "dfs" context for ganglia
 # dfs.class=org.apache.hadoop.metrics.ganglia.GangliaContext
 # dfs.period=10
 # dfs.servers=localhost:8649
 
+
+# Configuration of the "mapred" context for null
+mapred.class=org.apache.hadoop.metrics.spi.NullContext
+
+# Configuration of the "mapred" context for file
+#mapred.class=org.apache.hadoop.metrics.file.FileContext
+#mapred.period=10
+#mapred.fileName=/tmp/mrmetrics.log
+
 # Configuration of the "mapred" context for ganglia
 # mapred.class=org.apache.hadoop.metrics.ganglia.GangliaContext
 # mapred.period=10
 # mapred.servers=localhost:8649
+
+
+# Configuration of the "jvm" context for null
+jvm.class=org.apache.hadoop.metrics.spi.NullContext
+
+# Configuration of the "jvm" context for file
+#jvm.class=org.apache.hadoop.metrics.file.FileContext
+#jvm.period=10
+#jvm.fileName=/tmp/jvmmetrics.log
+
+# Configuration of the "jvm" context for ganglia
+# jvm.class=org.apache.hadoop.metrics.ganglia.GangliaContext
+# jvm.period=10
+# jvm.servers=localhost:8649
